# bgc-platform

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.bot  fly.toml  pyproject.toml  railway.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: 00-inventario-actual.md  01-requisitos.md  02-arquitectura.md  04-contrato-intenciones.md  05-contrato-api.md  06-contratos-de-calidad.md  07-division-trabajo.md  08-onboarding-dev-b.md  09-riesgos.md  10-plan-fases.md  11-estado-actual.md
docs/03-adr/: ADR-001-postgresql.md  ADR-002-escritorio-importa-core.md  ADR-003-sin-escritura-offline.md  ADR-004-adaptador-mensajeria.md  ADR-005-confirmacion-explicita.md  ADR-006-portal-web-fuera-de-alcance.md  ADR-007-monorepo-uv-workspaces.md  ADR-008-comprobantes-por-capa.md  ADR-009-fastapi-sincrono.md  ADR-010-canales-telegram-whatsapp.md
scripts/: migrate_sqlite_to_postgres.py  seed_familias.py  seed_from_sqlite.py
