[project]
name = "tesoro"
version = "0.1.0"
description = "Plataforma cooperativa de ahorro y crédito — monorepo raíz"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/contracts",
    "packages/api",
    "packages/desktop",
    "packages/bot",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["packages"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
